--- a/lib/beam_demo_web/templates/user_settings/edit.html.heex
+++ b/lib/beam_demo_web/templates/user_settings/edit.html.heex
@@ -2,8 +2,8 @@
 
 <h3>Change email</h3>
 
-<.form let={f} for={@email_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_email">
-  <%= if @email_changeset.action do %>
+<.form let={f} for={@conn} action={Routes.user_settings_path(@conn, :update)} id="update_email" as={:user}>
+  <%= if @error_messages do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
@@ -26,8 +26,8 @@
 
 <h3>Change password</h3>
 
-<.form let={f} for={@password_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_password">
-  <%= if @password_changeset.action do %>
+<.form let={f} for={@conn} action={Routes.user_settings_path(@conn, :update)} id="update_password" as={:user}>
+  <%= if @error_messages do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
