--- a/lib/beam_demo_web/templates/page/index.html.heex
+++ b/lib/beam_demo_web/templates/page/index.html.heex
@@ -1,14 +1,14 @@
-<section class="phx-hero">
+<%= content_tag :section, class: class="#{@class}" do %>
   <h1><%= gettext "Welcome to ActiveMemory Demo!" %></h1>
-</section>
+<% end %>
 
 <section class="row">
   <article class="column">
     <%= if assigns[:current_user] do %>
     <ul>
       <li><%= link "Addresses", to: Routes.address_index_path(@conn, :index) %></li>
-      <li><%= link "Application Settings", to: Routes.setting_index_path(@conn, :index) %></li>
-      <li><%= link "Account Settings", to: Routes.user_settings_path(@conn, :edit) %></li>
+      <li><%= link "My Account Settings", to: Routes.user_settings_path(@conn, :edit) %></li>
+      <li><%= link "Configuration Settings", to: Routes.setting_index_path(@conn, :index) %></li>
     </ul>
     <% end %>
     <h3>Adapters</h3>
@@ -16,7 +16,7 @@
       <li>Address: <%= BeamDemo.Accounts.Address.__attributes__(:adapter) %></li>
       <li>User: <%= BeamDemo.Accounts.User.__attributes__(:adapter) %></li>
       <li>UserToken: <%= BeamDemo.Accounts.UserToken.__attributes__(:adapter) %></li>
-      <li>Setting: <%= BeamDemo.Utils.Setting.__attributes__(:adapter) %></li>
+      <li>Configuration Settings: <%= BeamDemo.Utils.Setting.__attributes__(:adapter) %></li>
       <li>StateCode: <%= BeamDemo.Utils.StateCode.__attributes__(:adapter) %></li>
     </ul>
 
