removed warnings added helpful comments

--- a/lib/beam_demo_web/templates/page/index.html.heex
+++ b/lib/beam_demo_web/templates/page/index.html.heex
@@ -1,4 +1,4 @@
-<%= content_tag :section, class: class="#{@class}" do %>
+<%= content_tag :section, class: @class do %>
   <h1><%= gettext "Welcome to ActiveMemory Demo!" %></h1>
 <% end %>
 
